--- a/mavenproject1/src/main/java/fenetreLocal/FenetreInterieurLocal.form
+++ b/mavenproject1/src/main/java/fenetreLocal/FenetreInterieurLocal.form
@@ -139,6 +139,22 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="menuAjouterRouteur">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ajouter Routeur"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuAjouterRouteurActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="menuAjouterBorne">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ajouter Borne"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuAjouterBorneActionPerformed"/>
+              </Events>
+            </MenuItem>
           </SubComponents>
         </Menu>
       </SubComponents>
