--- a/mavenproject1/src/main/java/fenetreLocal/FenetreInterieurLocal.form
+++ b/mavenproject1/src/main/java/fenetreLocal/FenetreInterieurLocal.form
@@ -227,6 +227,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Valider"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="OkRouteurActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="CancelRouteur">
           <Properties>
